# python-project-50

./: Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  find_diff.py  parser.py
gendiff/formatters/: json_format.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: gendiff_test.py  test_gendiff.py
tests/test_data/: expected_json.txt  result_json.txt
